fixed login alignment
fixed login alignment so the search hit box is not on the login/sign up

--- a/styles/style.css
+++ b/styles/style.css
@@ -221,9 +221,6 @@ text-align:center;
 #searchButton{
   float:right;
 }
-.rightNerds {
-  float:right;
-}
 .topnav a:hover {
   color:#8f8e8e;
   transition: 0.15s ease-in-out;
